# Nesy-GenRevision

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
docs/: aaai_methodology.md  adaptive_nesygen_methodology.md  end_to_end_experiment.md  proposed_methodology_adaptive_nesygen.md  reviewer_response_matrix.md  reviewer_revision_plan.md  supervisor_progress_brief.html
nesy_gen/: __init__.py
notebooks/: AAAI_Adaptive_MedGemma_Colab.ipynb  AAAI_Adaptive_NesyGen_Colab.ipynb  AAAI_MedGemma_QLoRA_Finetuning_Colab.ipynb  AAAI_NesyGen_Simple_Colab.ipynb  AAAI_RAG_PrimeKG_LTN_Gate_Colab.ipynb  Colab_NesyGen_Reproducible_Run.ipynb
scripts/: __init__.py  analyze_reasoning_outputs.py  audit_prediction_leakage.py  build_adaptive_explanation_report.py  build_manifest.py  build_qualitative_report.py  build_radiology_primekg.py  compare_generation_systems.py  download_primekg.py  evaluate_adaptive_explanations.py  evaluate_entity_linker.py  evaluate_factuality.py  evaluate_generation.py  generate_blip_reports.py  generate_graph_verified_blip_reports.py  generate_graph_verified_r2gen_t5_reports.py  generate_graph_verified_vision_t5_reports.py  generate_medgemma_adaptive_reports.py  generate_r2gen_t5_reports.py  generate_rag_primekg_reports.py  generate_reports.py  generate_vision_t5_reports.py  inspect_primekg.py  plot_results.py  resolve_dataset.py  run_ablation_suite.py  run_demo.py  run_primekg_reasoning.py  run_retrieval_baseline.py  run_sensitivity_from_reasoning.py  train_blip_report_generator.py  train_medgemma_lora.py  train_r2gen_t5_generator.py  (+4 more)
(+80 files in other folders)
