[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nesy-gen"
version = "0.1.0"
description = "Neuro-symbolic graph-verified chest X-ray report generation."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Nesy-Gen Authors" }]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "networkx>=3.0",
  "scikit-learn>=1.2",
  "tqdm>=4.64",
]

[project.optional-dependencies]
torch = [
  "torch>=2.1",
  "torchvision>=0.16",
  "transformers>=4.50",
  "accelerate>=0.30",
  "timm>=0.9",
  "pillow>=10.0",
]
nlp = [
  "spacy>=3.7",
  "scispacy>=0.5.4",
]
eval = [
  "nltk>=3.8",
  "rouge-score>=0.1.2",
  "matplotlib>=3.7",
  "pycocoevalcap>=1.2",
]
colab = [
  "kagglehub>=0.2.8",
]
dev = [
  "pytest>=7.4",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["nesy_gen*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py310"
